# dbtk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  README.md  configuration_docs.md  examples.py  pyproject.toml  pytest.ini  run_tests.py  test_excel_modes.py
dbtk/: __init__.py  cli.py  config.py  cursors.py  database.py  dbtk_sample.yml  defaults.py  logging_utils.py  record.py  utils.py
dbtk/dialects/: __init__.py  base.py  mysql.py  oracle.py  postgres.py  snowflake.py  sqlserver.py
dbtk/etl/: __init__.py  base_surge.py  bulk.py  bulk_surge.py  config_generators.py  data_surge.py  manager.py  managers.py  table.py  transforms.py
dbtk/etl/transforms/: __init__.py  address.py  core.py  database.py  datetime.py  email.py  phone.py
dbtk/formats/: __init__.py  edi.py
dbtk/readers/: __init__.py  base.py  csv.py  data_frame.py  edi_formats.py  excel.py  fixed_width.py  json.py  utils.py  xml.py
dbtk/writers/: __init__.py  base.py  csv.py  database.py  excel.py  fixed_width.py  json.py  utils.py  xml.py
docs/: 01-getting-started.md  02-configuration.md  03-database-connections.md  04-record.md  05-readers.md  06-writers.md  06b-excel.md  07-table.md  08-datasurge.md  09-etl-tools.md  10-advanced.md  11-api-reference.md  12-troubleshooting.md  advanced.md  api-reference.md  api.rst  conf.py  configuration.md  database-connections.md  datasurge.md  etl-tools.md  etl.md  getting-started.md  index.rst  readers-writers.md  readers.md  record.md  table.md  troubleshooting.md  writers.md
docs/_static/: custom.css  custom.js
examples/: README.md  bulk_load.py  bulk_load_imdb_subset.py  bulk_load_imdb_subset_pg.py  bulk_load_titles.py  data_load.py  data_load_imdb_subset.py  data_load_ipeds_completions.py  data_load_names.py  formatted_excel.py  formatted_spreadsheet.py  linked_spreadsheet.py  movie_cast.sql  movie_crew.sql  movie_list.sql  movie_principals.sql  prep_1927_data.py  yankees_1927.py
examples/output/: 1927_baseball.parquet  IMDB_Linked.xlsx  MLB-1927.xlsx  linked_spreadsheet.xlsx
tests/: conftest.py  requirements.txt  run_tests.py  sample_export.py  sample_import.py  test.yml  test_bulk.py  test_config.py  test_data_bending.py  test_edi_writer.py  test_excel_writer.py  test_fixed_width_record.py  test_logging_utils.py  test_query_lookup.py  test_readers.py  test_record.py  test_table.py  test_table_new_features.py  test_transforms_core.py  test_transforms_datetime.py  test_transforms_phone.py  test_validation_collector.py  test_writers.py
tests/fixtures/readers/: sample_ach.ach  sample_data.csv  sample_data.json  sample_data.ndjson  sample_data.txt  sample_data.xls  sample_data.xlsx  sample_data.xml  sample_data_stream.xml  sample_nested.json  states.csv
