[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtk"
version = "0.8.0"
description = "Data Benders Toolkit - A lightweight toolkit for data integration, ELT and ETL"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Scott Bailey <scottrbailey@gmail.com>"}
]
keywords = ["database", "etl", "data integration", "postgresql", "oracle", "mysql", "sql server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "PyYAML>=6.0",
    "cryptography>=3.4.8",
    "importlib-metadata>=1.0;python_version<'3.8'"
]

[project.optional-dependencies]
encryption = ["keyring>=23.0.0"]
formats = ["lxml>=4.6.0", "openpyxl>=3.0.0"]
recommended = [
    "keyring>=23.0.0",
    "lxml>=4.6.0",
    "openpyxl>=3.0.0",
    "phonenumbers>=8.12.0",
    "python-dateutil>=2.8.0",
    "usaddress>=0.5.11"
]
postgresql = ["psycopg2-binary>=2.9", "psycopg[binary]>=3.1"]
oracle = ["oracledb>=1.0;python_version>='3.7'",  # For modern systems
    "cx_Oracle>=8.0;python_version<'3.7'",  # Fallback for 3.6
]
mysql = ["pymysql>=1.0"]
sqlserver = ["pyodbc>=4.0.21,<5.0"]
all = [
    "keyring>=23.0.0",
    "lxml>=4.6.0",
    "openpyxl>=3.0.0",
    "xlrd>=1.2.0",
    "phonenumbers>=8.12.0",
    "python-dateutil>=2.8.0",
    "usaddress>=0.5.11"
]
dev = ["pytest>=6.0", "pytest-cov>=2.10"]

[project.scripts]
dbtk = "dbtk.cli:main"

[project.urls]
Homepage = "https://github.com/scottrbailey/dbtk"
Documentation = "https://dbtk.readthedocs.io"
Repository = "https://github.com/scottrbailey/dbtk.git"

[tool.setuptools.package-data]
dbtk = ["dbtk_sample.yml"]